<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PredictActivity">

    <ImageView
        android:id="@+id/Iv_Image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toStartOf="@+id/Iv_Gray"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Iv_Gray"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Iv_Image"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_Gallery"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toStartOf="@+id/Btn_Camera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Iv_Image" />

    <Button
        android:id="@+id/Btn_Camera"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Btn_Gallery"
        app:layout_constraintTop_toBottomOf="@+id/Iv_Image" />

    <Button
        android:id="@+id/Btn_Predict"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/predict"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_Gallery"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/Tv_predict"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/result_of_prediction"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_Predict" />

</androidx.constraintlayout.widget.ConstraintLayout>